summative.moria.Moria.scala.code
var color:Color=getCouleurSol()
while (color!=Color.GREEN) {

	while (!estSurBiscuit() && !estDosMur()) {
    recule();
    color=getCouleurSol();
  }
  if (estSurBiscuit) {
  prendBiscuit();
  avance();
  }
  
  while (!estSurBiscuit() &&!estDosMur() ) {
  	avance();
    color=getCouleurSol();
  }
  
  if (estSurBiscuit) {
  recule();
  poseBiscuit();
  recule();
  }
  
  if (estDosMur && !estSurBiscuit) {
    gauche();gauche();gauche();gauche(); if (!estFaceMur()) {avance()}
  }
  
}